<resources>
    <string name="app_name">Interview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_view_hint">Search</string>

    <string name="bottom_sheet_header">Statistics</string>
    <string name="bottom_sheet_total_list_size">Total list size : </string>
    <string name="bottom_sheet_total_list_size_data">0</string>
    <string name="bottom_sheet_max_occuring_element">Max occuring elements </string>

    <string name="bottom_sheet_first_element">First Element</string>
    <string name="bottom_sheet_second_element">Second Element</string>
    <string name="bottom_sheet_third_element">Third Element</string>

    <string name="list_item_name">Name</string>
    <string name="list_item_category">Category</string>
    <string name="title_activity_compose">ComposeActivity</string>

</resources>