<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="20dp"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_list_size"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/bottom_sheet_header"/>

    <TextView
        android:id="@+id/tv_list_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/bottom_sheet_total_list_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"/>

    <TextView
        android:id="@+id/tv_list_size_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/bottom_sheet_total_list_size_data"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_list_size"
        app:layout_constraintTop_toBottomOf="@id/tv_header"/>

    <TextView
        android:id="@+id/max_occuring_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/bottom_sheet_max_occuring_element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_size" />


    <TextView
        android:id="@+id/firstElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/max_occuring_elements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/bottom_sheet_first_element"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/secondElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/firstElement"
        android:text="@string/bottom_sheet_second_element"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/thirdElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondElement"
        tools:text="@string/bottom_sheet_third_element"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>